2.0.0 (Unreleased):
- Removed additional_entries from add_function
- Added support for Python typing

1.3.0:
- add_code_block and add_data_block now accept (int, int) tuples as keys for
  symbolic expressions, with the first item being the offset and the second
  item being the size (which gets put in the symbolicExpressionSizes aux data
  table)
- add_function now accepts a set of entry blocks for the entry_block parameter

1.2.0:
- Added additional_entries parameter to add_function for specifying multiple
  entry points to functions

1.1.0:
- Added byte_order to create_test_module and defaulted to inferring it from
  the module's ISA

1.0.0:
- Initial version