@@ -19,6 +19,7 @@ from .helpers import (
     add_elf_symbol_info,
     add_function,
     add_proxy_block,
+    add_section,
     add_symbol,
     add_text_section,
     create_test_module,
@@ -34,6 +35,7 @@ __all__ = [
     "add_elf_symbol_info",
     "add_function",
     "add_proxy_block",
+    "add_section",
     "add_symbol",
     "add_text_section",
     "create_test_module",
